SDN/configure/YAML FILE/nginx-service.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: demo3
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  namespace: demo3
spec:
  minReadySeconds: 10
  replicas: 2
  selector:
    matchLabels:
      app: nginx
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - name: nginx
          image: nginx:latest
          ports:
            - containerPort: 80
          resources:
            limits:
              cpu: "0.5" 
              memory: "256Mi" 
            requests:
              cpu: "0.1"
              memory: "64Mi" 
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 5
            failureThreshold: 3
