SDN/configure/YAML FILE/service-Nginx.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
  namespace: demo3
spec:
  selector:
    app: nginx
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 30000
  type: NodePort 
# ---
# apiVersion: v1
# kind: Service
# metadata:
#   name: nginx-service
#   namespace: nginx1
# spec:
#   selector:
#     app: nginx
#   ports:
#     - protocol: TCP
#       port: 80
#       targetPort: 80
#       nodePort: 30001
#   type: NodePort
